CSS Absolute image paths

--- a/subsaharan.css
+++ b/subsaharan.css
@@ -3,10 +3,10 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(../img/texture-bg.png) #ef9a2c;
+  background: url(https://swachira.github.io/subsaharan-site/img/texture-bg.png) #ef9a2c;
 }
 .cornered {
-  background: url(../img/wh-corner.png) no-repeat;
+  background: url(https://swachira.github.io/subsaharan-site/img/wh-corner.png) no-repeat;
   height: 350px;
   width: 350px;
   position: absolute;
@@ -36,7 +36,7 @@ body {
 }
 .tagline {
   height: 60px;
-  background: #fff url(../img/unique-gift.png) no-repeat;
+  background: #fff url(https://swachira.github.io/subsaharan-site/img/unique-gift.png) no-repeat;
   text-indent: -999px;
 }
 .btn {
