--- a/subsaharan.css
+++ b/subsaharan.css
@@ -5,59 +5,139 @@ body {
   padding: 0;
   background: url(https://swachira.github.io/subsaharan-site/img/texture-bg.png) #ef9a2c;
 }
-.cornered {
-  background: url(https://swachira.github.io/subsaharan-site/img/wh-corner.png) no-repeat;
-  height: 350px;
-  width: 350px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-size: cover;
+
+/* Larger Screens */
+@media screen and (min-width: 901px) {
+  .cornered {
+    background: url(https://swachira.github.io/subsaharan-site/img/wh-corner.png) no-repeat;
+    height: 350px;
+    width: 350px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-size: cover;
+  }
+  .container {
+    padding: 30% 0 0 0;
+  }
+  .logo {
+    width: 30%;
+    padding-left: 15%;
+  }
+  .tag-bg {
+    background: #fff;
+    width: 30%;
+    margin: 15px 0 90px 0;
+    padding-left: 15%;
+  }
+  .tagline-img {
+  }
+  .tagline-img img {
+    height: auto;
+    margin: 10px;
+    max-width: 93%;
+  }
+  .tagline {
+    height: 60px;
+    background: #fff url(https://swachira.github.io/subsaharan-site/img/unique-gift.png) no-repeat;
+    text-indent: -999px;
+  }
+  .btn {
+    color: #000;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 20px 80px 20px 30px;
+    margin: 25px 0 0 15%;
+    width: 250px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    background: #fff;
+  }
+  .btn:hover {
+    color: #fff;
+    background: #000;
+  }
+  .btn-text {
+    padding: 30px;
+  }
+  .btn img {
+    width: 20px;
+  }
 }
-.container {
-  padding: 30% 0 0 0;
+
+/* Smaller Screens */
+@media screen and (max-width: 900px) {
+  .cornered {
+    background: url(https://swachira.github.io/subsaharan-site/img/wh-corner.png) no-repeat;
+    height: 70px;
+    width: 70px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-size: cover;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+  }
+  .logo {
+    width: 80%;
+    padding: 8px;
+  }
+  .tag-bg {
+    background: #fff;
+    width: 100%;
+    margin: 20px 0 40px 0;
+    padding-left: 8px;
+  }
+  .tagline-img {
+  }
+  .tagline-img img {
+    height: auto;
+    margin: 10px;
+    max-width: 93%;
+  }
+  .tagline {
+    height: 60px;
+    background: #fff url(https://swachira.github.io/subsaharan-site/img/unique-gift.png) no-repeat;
+    text-indent: -999px;
+  }
+  .btn {
+    color: #000;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 15px;
+    width: 50%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    background: #fff;
+  }
+  .btn:hover {
+    color: #fff;
+    background: #000;
+  }
+  .btn-text {
+    padding: 30px;
+  }
+  .btn img {
+    width: 20px;
+  }
 }
-.logo {
-  width: 30%;
-  padding-left: 15%;
-}
-.tag-bg {
-  background: #fff;
-  width: 30%;
-  margin: 15px 0 90px 0;
-  padding-left: 15%;
-}
-.tagline-img {
-}
-.tagline-img img {
-  height: auto;
-  margin: 10px;
-  max-width: 93%;
-}
-.tagline {
-  height: 60px;
-  background: #fff url(https://swachira.github.io/subsaharan-site/img/unique-gift.png) no-repeat;
-  text-indent: -999px;
-}
-.btn {
-  color: #000;
-  text-decoration: none;
-  border-radius: 10px;
-  padding: 20px 80px 20px 30px;
-  margin: 25px 0 0 15%;
-  width: 250px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  background: #fff;
-}
-.btn:hover {
-  color: #fff;
-  background: #000;
-}
-.btn-text {
-  padding: 30px;
-}
-.btn img {
-  width: 20px;
+
+/* Tiny Screens */
+@media screen and (max-width: 500px) {
+  .cornered {
+    background: url(https://swachira.github.io/subsaharan-site/img/wh-corner.png) no-repeat;
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-size: cover;
+  }
 }
